CSS changes only. White space correction in code for HTML and JS

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,10 +1,17 @@
+img {
+  display: block;
+  margin: 0 auto;
+}
+
 h1 {
+  font-family: 'Bangers', cursive;
   text-align: center;
-  font-size: 50px;
+  font-size: 70px;
   margin: 20px 20px 20px 20px;
 }
 
-h2 {
+p {
+  font-family: 'Bangers', cursive;
   text-align: center;
   font-size: 25px;
   margin: 20px 20px 20px 20px;
@@ -13,8 +20,8 @@ h2 {
 .track1, .track2 {
   position: relative;
   width: 800px; height: 150px;
-  border: 2px solid red;
-  margin: 20px 20px 20px 20px;
+  border: 5px solid red;
+  margin: 40px 40px 40px 40px;
 }
 
 #player1, #player2 {
@@ -23,10 +30,11 @@ h2 {
   background: blue;
   margin: 20px 20px 20px 20px;
   position: relative;
+  font-family: 'Bangers', cursive;
   text-align: center;
-  font-size: 30px;
+  font-size: 70px;
 }
 
 button {
-  margin: 20px 20px 20px 20px;
+  margin: 20px 40px 40px 40px;
 }
